--- a/styles/glowytabs.styl
+++ b/styles/glowytabs.styl
@@ -164,8 +164,8 @@ instant_text_color_change = true
     background-position 0px 0px
 
 // search, too
-#gnav>input.swatch#st-search-input:focus,
-#gnav>input.swatch#st-search-input:hover
+#gnav input.swatch#st-search-input:focus,
+#gnav input.swatch#st-search-input:hover
     background-position 0px 0px
     whitetext()
 
@@ -277,7 +277,7 @@ x:-o-prefocus, #st-search-input
     position relative
 
 //search-specific hardcore overrides
-#gnav>input.swatch#st-search-input {
+#gnav input.swatch#st-search-input {
     outline: none;
     // margin: 0;
     // padding: 0;
