--- a/styles/glowytabs.styl
+++ b/styles/glowytabs.styl
@@ -1,3 +1,5 @@
+/* NOTICE: As of May 3, 2015, this is no longer used to generate glowytabs.css. */
+
 // This dingus makes use of HUSL and nib, so those should be provided to Stylus at compile time:
 // stylus < input.styl > output.css -u /path/to/husl.js -u /path/to/nib/
 // This dingus is intended to be tested with page--the-future.tpl.php. Remove stuff that isn't necessary for that.
