further tweaked the tab bar
- removed dividing lines between tabs
- colored the search bar white when clicked
- animated “Games” tab icon, but only once every 20s
- animated the Sorting Hat, but only once every 5 min

--- a/styles/glowytabs.css
+++ b/styles/glowytabs.css
@@ -1,4 +1,4 @@
-/* NOTICE: As of May 3, 2015, this is no longer generated from glowytabs.styl. */
+/* NOTICE: As of May 3, 2015, this file is no longer generated from glowytabs.styl. */
 
 /*
 @font-face {
@@ -45,7 +45,7 @@
       background-image: url("http://sjsugamedev.com/sites/all/themes/trainhole/images/tab%20bar%20icons/forum%202x.png");
     }
 .games-icon {
-  background-image: url("http://sjsugamedev.com/sites/all/themes/trainhole/images/tab%20bar%20icons/games%202x.png");
+  background-image: url("http://sjsugamedev.com/sites/all/themes/trainhole/images/tab%20bar%20icons/games%202x.gif"); 
 }
 .events-icon {
   background-image: url("http://sjsugamedev.com/sites/all/themes/trainhole/images/tab%20bar%20icons/events%202x.png");
@@ -63,18 +63,18 @@
   -webkit-font-smoothing: none;
 }
 #gnav .swatch.chosen {
-  z-index: 2;
+  z-index: 101;
 }
 #gnav .swatch:active {
-  z-index: 3;
+  z-index: 102;
 }
 #gnav input.swatch:focus {
-  z-index: 4;
+  z-index: 103;
 }
 #gnav .swatch:active,
 #gnav .swatch.chosen,
 #gnav .swatch:focus {
-  margin: -2px -2px -2px 0px;
+  margin: -2px -2px -2px -2px;
   color: #333;
   border-width: 2px;
 }
@@ -90,11 +90,11 @@
 }
 #gnav .swatch,
 #gnav:active .swatch.chosen {
-  -webkit-transition: 0.25s background-color, 0.25s width;
-  -moz-transition: 0.25s background-color, 0.25s width;
-  -o-transition: 0.25s background-color, 0.25s width;
-  -ms-transition: 0.25s background-color, 0.25s width;
-  transition: 0.25s background-color, 0.25s width;
+  -webkit-transition: 0.25s background-color, 0.25s color, 0.25s width;
+  -moz-transition: 0.25s background-color, 0.25s color, 0.25s width;
+  -o-transition: 0.25s background-color, 0.25s color, 0.25s width;
+  -ms-transition: 0.25s background-color, 0.25s color, 0.25s width;
+  transition: 0.25s background-color, 0.25s color, 0.25s width;
 }
 #gnav .swatch.dark:active,
 #gnav .swatch.dark.chosen,
@@ -106,8 +106,8 @@
 #gnav .swatch.dark:hover .gnav-icon {
   background-position: 0px 0px;
 }
-#gnav input.swatch#st-search-input:focus,
-#gnav input.swatch#st-search-input:hover {
+#gnav input.swatch.dark#st-search-input:focus,
+#gnav input.swatch.dark#st-search-input:hover {
   background-position: 0px 0px;
   color: #eee;
 }
@@ -137,18 +137,18 @@
 
 #gnav .swatch:nth-child(1),
 #gnav:active .swatch:nth-child(1).chosen {
-  background-color: #FF5968;
+  background-color: #FA727B;
 }
 #gnav .swatch:nth-child(1):hover,
 #gnav .swatch:nth-child(1):active,
 #gnav .swatch:nth-child(1).chosen {
-  background-color: #FF5968;
+  background-color: #FA727B;
 }
 #gnav .swatch:nth-child(1):active,
 #gnav .swatch:nth-child(1).chosen {
-  -webkit-box-shadow: 0 0 5px #FF5968, 0 5px 10px rgba(0,0,0,0.5), -2px 0 0 #333, 2px 0 0 #333;
-  box-shadow: 0 0 5px #FF5968, 0 5px 10px rgba(0,0,0,0.5), -2px 0 0 #333, 2px 0 0 #333;
-  border-color: #FF5968;
+  -webkit-box-shadow: 0 0 5px #FA727B, 0 5px 10px rgba(0,0,0,0.5);
+  box-shadow: 0 0 5px #FA727B, 0 5px 10px rgba(0,0,0,0.5);
+  border-color: #FA727B;
 }
 
 #gnav .swatch:nth-child(2),
@@ -162,86 +162,86 @@
 }
 #gnav .swatch:nth-child(2):active,
 #gnav .swatch:nth-child(2).chosen {
-  -webkit-box-shadow: 0 0 5px #FAC000, 0 5px 10px rgba(0,0,0,0.5), -2px 0 0 #333, 2px 0 0 #333;
-  box-shadow: 0 0 5px #FAC000, 0 5px 10px rgba(0,0,0,0.5), -2px 0 0 #333, 2px 0 0 #333;
+  -webkit-box-shadow: 0 0 5px #FAC000, 0 5px 10px rgba(0,0,0,0.5);
+  box-shadow: 0 0 5px #FAC000, 0 5px 10px rgba(0,0,0,0.5);
   border-color: #FAC000;
 }
 
 #gnav .swatch:nth-child(3),
 #gnav:active .swatch:nth-child(3).chosen {
-  background-color: #52F676;
+  background-color: #5CF488;
 }
 #gnav .swatch:nth-child(3):hover,
 #gnav .swatch:nth-child(3):active,
 #gnav .swatch:nth-child(3).chosen {
-  background-color: #52F676;
+  background-color: #5CF488;
 }
 #gnav .swatch:nth-child(3):active,
 #gnav .swatch:nth-child(3).chosen {
-  -webkit-box-shadow: 0 0 5px #52F676, 0 5px 10px rgba(0,0,0,0.5), -2px 0 0 #333, 2px 0 0 #333;
-  box-shadow: 0 0 5px #52F676, 0 5px 10px rgba(0,0,0,0.5), -2px 0 0 #333, 2px 0 0 #333;
-  border-color: #52F676;
+  -webkit-box-shadow: 0 0 5px #5CF488, 0 5px 10px rgba(0,0,0,0.5);
+  box-shadow: 0 0 5px #5CF488, 0 5px 10px rgba(0,0,0,0.5);
+  border-color: #5CF488;
 }
 
 #gnav .swatch:nth-child(4),
 #gnav:active .swatch:nth-child(4).chosen {
-  background-color: #00CAC0;
+  background-color: #31D2CB;
 }
 #gnav .swatch:nth-child(4):hover,
 #gnav .swatch:nth-child(4):active,
 #gnav .swatch:nth-child(4).chosen {
-  background-color: #00CAC0;
+  background-color: #31D2CB;
 }
 #gnav .swatch:nth-child(4):active,
 #gnav .swatch:nth-child(4).chosen {
-  -webkit-box-shadow: 0 0 5px #00CAC0, 0 5px 10px rgba(0,0,0,0.5), -2px 0 0 #333, 2px 0 0 #333;
-  box-shadow: 0 0 5px #00CAC0, 0 5px 10px rgba(0,0,0,0.5), -2px 0 0 #333, 2px 0 0 #333;
-  border-color: #00CAC0;
+  -webkit-box-shadow: 0 0 5px #31D2CB, 0 5px 10px rgba(0,0,0,0.5);
+  box-shadow: 0 0 5px #31D2CB, 0 5px 10px rgba(0,0,0,0.5);
+  border-color: #31D2CB;
 }
 
 #gnav .swatch:nth-child(5),
 #gnav:active .swatch:nth-child(5).chosen {
-  background-color: #526AD0;
+  background-color: #6481D9;
 }
 #gnav .swatch:nth-child(5):hover,
 #gnav .swatch:nth-child(5):active,
 #gnav .swatch:nth-child(5).chosen {
-  background-color: #526AD0;
+  background-color: #6481D9;
 }
 #gnav .swatch:nth-child(5):active,
 #gnav .swatch:nth-child(5).chosen {
-  -webkit-box-shadow: 0 0 5px #526AD0, 0 5px 10px rgba(0,0,0,0.5), -2px 0 0 #333, 2px 0 0 #333;
-  box-shadow: 0 0 5px #526AD0, 0 5px 10px rgba(0,0,0,0.5), -2px 0 0 #333, 2px 0 0 #333;
-  border-color: #526AD0;
+  -webkit-box-shadow: 0 0 5px #6481D9, 0 5px 10px rgba(0,0,0,0.5);
+  box-shadow: 0 0 5px #6481D9, 0 5px 10px rgba(0,0,0,0.5);
+  border-color: #6481D9;
 }
 
 #gnav .swatch:nth-child(6),
 #gnav:active .swatch:nth-child(6).chosen {
-  background-color: #AD3FAC;
+  background-color: #BC5ABB;
 }
 #gnav .swatch:nth-child(6):hover,
 #gnav .swatch:nth-child(6):active,
 #gnav .swatch:nth-child(6).chosen {
-  background-color: #AD3FAC;
+  background-color: #BC5ABB;
 }
 #gnav .swatch:nth-child(6):active,
 #gnav .swatch:nth-child(6).chosen {
-  -webkit-box-shadow: 0 0 5px #AD3FAC, 0 5px 10px rgba(0,0,0,0.5), -2px 0 0 #333, 2px 0 0 #333;
-  box-shadow: 0 0 5px #AD3FAC, 0 5px 10px rgba(0,0,0,0.5), -2px 0 0 #333, 2px 0 0 #333;
-  border-color: #AD3FAC;
+  -webkit-box-shadow: 0 0 5px #BC5ABB, 0 5px 10px rgba(0,0,0,0.5);
+  box-shadow: 0 0 5px #BC5ABB, 0 5px 10px rgba(0,0,0,0.5);
+  border-color: #BC5ABB;
 }
 
 #gnav #st-search-input {
-  background-color: #526AD0;
-}
-#gnav #st-search-input:hover,
-#gnav #st-search-input:focus {
-  background-color: #526AD0;
+  background-color: #6481D9;
 }
 #gnav #st-search-input:focus {
-  -webkit-box-shadow: 0 0 5px #526AD0, 0 5px 10px rgba(0,0,0,0.5), -2px 0 0 #333, 2px 0 0 #333;
-  box-shadow: 0 0 5px #526AD0, 0 5px 10px rgba(0,0,0,0.5), -2px 0 0 #333, 2px 0 0 #333;
-  border-color: #526AD0;
+  background-color: white;
+/*  box-shadow: inset 0 1px 2px rgba(0,0,0,.5); */
+}
+#gnav #st-search-input:focus {
+  -webkit-box-shadow: 0 0 5px white, 0 5px 10px rgba(0,0,0,0.5);
+  box-shadow: 0 0 5px white, 0 5px 10px rgba(0,0,0,0.5);
+  border-color: white; 
 }
 
 #gnav .swatch,
@@ -256,9 +256,7 @@
   text-decoration: none;
   color: #333;
   border-style: solid;
-  border-left: 2px #333 solid;
-  border-left-color: #333;
-  border-width: 0 0 0 2px;
+  border-width: 0;
   -webkit-border-radius: 0;
   border-radius: 0;
   position: relative;
@@ -297,10 +295,22 @@ x:-o-prefocus,
   color: #333;
 }
 #st-search-input::-moz-placeholder {
-  color: #333;
+  color: #333; 
 }
 #st-search-input:-ms-input-placeholder {
   color: #333;
+}
+#st-search-input:focus::-webkit-input-placeholder {
+  color: #ccc;
+}
+#st-search-input:focus:-moz-placeholder {
+  color: #ccc;
+}
+#st-search-input:focus::-moz-placeholder {
+  color: #ccc; 
+}
+#st-search-input:focus:-ms-input-placeholder {
+  color: #ccc;
 }
 #st-search-input {
   width: 54px;
