--- a/styles/glowytabs.styl
+++ b/styles/glowytabs.styl
@@ -1,4 +1,4 @@
-/* NOTICE: As of May 3, 2015, this is no longer used to generate glowytabs.css. */
+/* NOTICE: As of May 3, 2015, this file is no longer used to generate glowytabs.css. */
 
 // This dingus makes use of HUSL and nib, so those should be provided to Stylus at compile time:
 // stylus < input.styl > output.css -u /path/to/husl.js -u /path/to/nib/
